<resources>
    <string name="app_name">CRUD</string>
    <string name="codigo">Código del producto</string>
    <string name="descrip">Descripción del producto</string>
    <string name="precio">Precio del producto</string>
    <string name="resgistrar">REGISTRAR PRODUCTO</string>
    <string name="buscar">BUSCAR PRODUCTO</string>
    <string name="modificar">MODIFICAR PRODUCTO</string>
    <string name="eliminar">ELIMINAR PRODUCTO</string>
</resources>
